# ambientops

./: .gitignore  .tool-versions  CODE_OF_CONDUCT.md  Cargo.toml  ECOSYSTEM.scm  HOSPITAL_MODEL.adox  Justfile  PLAYBOOK.scm  PROVEN-INTEGRATION.md  README.adoc  ROADMAP.adoc  SECURITY.md  STATE.adoc  STATE.scm  justfile
.claude/: CLAUDE.md
.github/: PROVEN-INTEGRATION.md
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.machine_readable/6scm/: ECOSYSTEM.scm  STATE.scm
clinician/: Cargo.toml  Containerfile
clinician/src/: correlation.rs  lib.rs  main.rs  validation.rs
clinician/src/ai/: mod.rs
clinician/src/cache/: mod.rs
clinician/src/daemon/: mod.rs
clinician/src/forum/: mod.rs
clinician/src/p2p/: mod.rs
clinician/src/reasoning/: mod.rs
clinician/src/rules/: lifecycle.rs  mod.rs
clinician/src/satellites/: echidna.rs  hypatia.rs  mod.rs  panic_attacker.rs  verisimdb.rs
clinician/src/storage/: mod.rs
clinician/src/tools/: crisis.rs  disk.rs  health.rs  mod.rs  monitor.rs  network.rs  process.rs  security.rs  service.rs
composer/: PLAN.md
contracts/: WIRING.md  deno.json  mod.js
contracts-rust/: Cargo.toml
contracts-rust/src/: ambient_payload.rs  conversions.rs  envelope.rs  lib.rs  message_intent.rs  pack_manifest.rs  plan.rs  receipt.rs  run_bundle.rs  weather.rs
contracts/lib/: cross-validator.js  validator.js
contracts/schemas/: mod.js
contracts/tests/: schemas_test.js
docs/: AIRGAP_SDP_SECURITY.adoc  AMBIENTOPS_DNFINITION_BRIDGE.adoc  ARCHITECTURE.adoc  CONTRACTS.adoc  ECOSYSTEM_MAP.adoc  IDRIS_POLICY.sample.json  ROADMAP_MASTER.adoc
emergency-room/: v.mod
emergency-room/src/: backup.v  capture.v  capture_test.v  handoff.v  incident.v  incident_test.v  integration_test.v  main.v  utils.v
hardware-crash-team/: 0-AI-MANIFEST.a2ml  Cargo.toml  README.adoc  ROADMAP.adoc
hardware-crash-team/.claude/: CLAUDE.md
hardware-crash-team/.machine_readable/: ECOSYSTEM.scm  META.scm  STATE.scm
hardware-crash-team/src/: main.rs  sarif.rs  types.rs
hardware-crash-team/src/analyzer/: mod.rs
hardware-crash-team/src/remediation/: mod.rs
hardware-crash-team/src/scanner/: mod.rs
hardware-crash-team/src/tui/: app.rs  mod.rs  ui.rs
nafa-app/: Containerfile
nafa-app/client/src/: Main.res
nafa-app/client/src/Page/: Accessibility.res  Annotate.res  JourneyView.res  Offline.res
nafa-app/server/src/: demo-node.js  demo.js  main.js
nafa-app/shared/src/: Domain.res  Route.res
nafa-app/shared/test/: domain_test.js
network-dashboard/: README.adoc  ROADMAP.adoc  justfile  mix.exs  network-dashboard.manifest.ncl
network-dashboard/config/: config.exs  dev.exs  prod.exs  runtime.exs
network-dashboard/lib/network_dashboard/: application.ex  module_poller.ex
network-dashboard/lib/network_dashboard_web/live/: status_live.ex
network-dashboard/manifests/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
observatory/: .gitignore  mix.exs
observatory/lib/: system_observatory.ex
observatory/lib/mix/tasks/: sysobs.ex
observatory/lib/system_observatory/: ambient.ex  application.ex  bundle_ingestion.ex  cli.ex  correlator.ex  forecasting.ex  recommendation.ex  themes.ex  weather.ex
observatory/lib/system_observatory/metrics/: store.ex
observatory/src/abi/: Foreign.idr
observatory/test/: system_observatory_test.exs  test_helper.exs
observatory/test/system_observatory/: ambient_test.exs  bundle_ingestion_test.exs  cli_test.exs  correlator_test.exs  forecasting_test.exs  recommendation_test.exs  themes_test.exs
observatory/test/system_observatory/metrics/: store_test.exs
records/referrals/: mix.exs
records/referrals/lib/feedback_a_tron/: application.ex  audit_log.ex  credentials.ex  deduplicator.ex  network_verifier.ex  submitter.ex
records/referrals/lib/feedback_a_tron/mcp/: server.ex
records/referrals/lib/feedback_a_tron/mcp/tools/: submit_feedback.ex
records/referrals/test/feedback_a_tron/: audit_log_test.exs  deduplicator_test.exs
scripts/: ambientops-dnfinition-placement.sh  demo-flow.sh  integration-test.sh
traffic-conditioner/: README.adoc
