# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "ambientops-clinician"
version = "1.2.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
description = "AmbientOps clinician - AI-assisted system administration with learning capabilities"
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/ambientops"
keywords = ["sysadmin", "ai", "linux", "automation", "monitoring"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }

# System introspection (Sysinternals-like)
sysinfo = "0.31"              # Process, CPU, memory, disk
procfs = "0.17"               # Linux /proc filesystem
nix = { version = "0.29", features = ["fs", "process", "net", "user"] }

# Storage - ArangoDB
arangors = "0.6"              # ArangoDB client
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cache - Dragonfly (Redis-compatible)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# AI/SLM Integration
reqwest = { version = "0.12", features = ["json"] }
ollama-rs = "0.2"             # Local LLM via Ollama

# P2P Communication
libp2p = { version = "0.56", features = ["tokio", "mdns", "gossipsub", "kad"] }

# Anomaly detection (integrates with ESN/LSM)
ndarray = "0.16"

# Forum/solution search
scraper = "0.21"              # HTML parsing for forums
tantivy = "0.22"              # Local search index

# Logging and errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"

# Config
config = "0.14"
directories = "5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
ring = "0.17.13"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"

ambientops-contracts = { path = "../contracts-rust" }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "ambientops-clinician"
path = "src/main.rs"

[features]
default = []
gpu = []  # GPU acceleration for local SLM

[profile.release]
lto = true
codegen-units = 1
strip = true
