# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "ambientops-clinician"
version = "1.2.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
description = "AmbientOps clinician - AI-assisted system administration with learning capabilities"
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/ambientops"
keywords = ["sysadmin", "ai", "linux", "automation", "monitoring"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }

# System introspection (Sysinternals-like)
sysinfo = "0.31"              # Process, CPU, memory, disk
procfs = "0.17"               # Linux /proc filesystem
nix = { version = "0.29", features = ["fs", "process", "net", "user"] }

# Serialization (always needed)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (AI module uses curl via tokio::process, reqwest for future)
reqwest = { version = "0.12", features = ["json"] }

# Logging and errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"

# Config
config = "0.14"
directories = "5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
ring = "0.17.13"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"

ambientops-contracts = { path = "../contracts-rust" }

# === Feature-gated dependencies (roadmap items, not yet used in code) ===
arangors = { version = "0.6", optional = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }
ollama-rs = { version = "0.2", optional = true }
libp2p = { version = "0.56", features = ["tokio", "mdns", "gossipsub", "kad"], optional = true }
ndarray = { version = "0.16", optional = true }
scraper = { version = "0.21", optional = true }
tantivy = { version = "0.22", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "ambientops-clinician"
path = "src/main.rs"

[features]
default = []
gpu = []          # GPU acceleration for local SLM
storage = ["arangors"]    # ArangoDB knowledge base
cache = ["redis"]         # Dragonfly/Redis caching
ai = ["ollama-rs"]        # Ollama SLM integration
p2p = ["libp2p"]          # P2P mesh communication
search = ["tantivy"]      # Local full-text search index
forum = ["scraper"]       # Forum HTML scraping
anomaly = ["ndarray"]     # ESN/LSM anomaly detection
all = ["storage", "cache", "ai", "p2p", "search", "forum", "anomaly"]

[profile.release]
lto = true
codegen-units = 1
strip = true
